# tusk

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml  nginx.conf
mustax/: CMakeLists.txt  mustax.c  node.c  node.h  pool.h  str_pool.c  str_pool.h
mustax/templates/: pool.tpl.c  pool.tpl.h
src/: CMakeLists.txt  main.c  mustax.c  scgi.c  scgi.h  scgi_test.c  socket.c  socket.h  test_main.c  utility.c  utility.h
src/app/: CMakeLists.txt  main.c
src/routes/: CMakeLists.txt  _routes.h  hello.c  hello.hbs  login.c  login.hbs
src/routes/include/: routes.h
src/scgi/: CMakeLists.txt  scgi.c  scgi_test.c
src/scgi/include/: scgi.h
src/socket/: CMakeLists.txt  socket.c
src/socket/include/: socket.h
src/utility/: CMakeLists.txt  utility.c
